# pyglviewer

./: .gitignore  .mypy.ini  LICENSE  README.md  pyproject.toml
pyglviewer/: viewer.py
